tests/golden/type_errors/array_map_callback_parameter_mismatch.cd
map([1], fun (value: string): string { return value; });
