tests/golden/type_errors/array_map_callback_parameter_mismatch.err
Type error at 1:15: parameter `value` expects number, got string
  map([1], fun (value: string): string { return value; });
                ^
